--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,18 +1,28 @@
 server:
   servlet:
     encoding:
-      charset: utf-8
+      charset: UTF-8
       force: true
   port: 8080
+
 
 logging:
   level:
     root: INFO
-    com.blog: DEBUG
+    com.tenco: DEBUG
+
 
 spring:
-  datasource:
+  mustache:
+    suffix: .mustache
+    prefix: classpath:/templates/
+    cache: false
+    charset: UTF-8
+    servlet:
+      expose-session-attributes: true
+      expose-request-attributes: true
 
+  datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/blog?useSSl=false&serverTimezone=Asia/Seoul
     username: root
@@ -28,15 +38,14 @@ spring:
       data-locations:
         - classpath:db/data.sql
 
+
   jpa:
-    open-in-view: false
+    open-in-view: true
     hibernate:
       ddl-auto: create
-
     show-sql: true
     properties:
       hibernate:
         format_sql: true
         default_batch_fetch_size: 10
-
     defer-datasource-initialization: true
